--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -37,7 +37,7 @@
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/efd71d3ed7.js" crossorigin="anonymous"></script>
 
-  <link rel="icon" href="/images/favicon-32x32.png" type="image/x-icon">
+  <link rel="icon" href="public/images/favicon-32x32.png" type="image/x-icon">
   <title>JSS Connect</title>
 </head>
 
