--- a/views/userblog.ejs
+++ b/views/userblog.ejs
@@ -114,7 +114,7 @@
     </h2>
     <div id="blog-container">
       <div id="blogForm">
-        <form class="ui form" action="/userblog" method="POST">
+        <form class="ui form" action="/blogs/" method="POST">
           <div class="field">
             <div class="field">
               <label>Today's Date</label>
