--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,12 +12,12 @@
   <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
 </head>
 
-<link rel="stylesheet" href="css/header.css">
-<link rel="stylesheet" href=<%=cssName %> >
+<link rel="stylesheet" href="/css/header.css">
+<link rel="stylesheet" href=/<%=cssName %> >
 
 <!-- Magic Min CSS-->
 <!-- Animation library css -->
-<link rel="stylesheet" href="css/magic.min.css">
+<link rel="stylesheet" href="/css/magic.min.css">
 <!-- Font Awesome CDN -->
 <script src="https://kit.fontawesome.com/efd71d3ed7.js" crossorigin="anonymous"></script>
 
