changed top image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,7 +144,7 @@
 
       </div>
       <div id="homeImg">
-        <img src="images/topImg.png" style="width: 100%;" alt="top-img">
+        <img src="images/jssconnectTop.png" style="width: 100%;" alt="top-img">
       </div>
     </div>
 
