--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,8 +143,8 @@
 
 
       </div>
-      <div id="homeImg">
-        <img src="images/jssconnectTop.png" style="width: 100%;" alt="top-img">
+      <div style="width: 45%;">
+        <img src="images/jssconnectTop.png" style="width: 120%;" alt="top-img">
       </div>
     </div>
 
