Updated profile url

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -160,7 +160,7 @@
               </div>
             </div>
             <div class="caption-text">
-              <a href="https://www.aman123956.github.io" class="memberName">
+              <a href="https://aman123956.github.io/" class="memberName">
                 <h4>Aman Dixit</h4>
               </a>
               <p>Web Developer</p>
