--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,7 +98,7 @@
 
 
   <!-- Loading Box -->
-  <div id="loading">
+  <!-- <div id="loading">
     <div id="loading-header" style="text-align:center;">
       <h4 id="quotes"><i class="fa fa-bars" aria-hidden="true"></i>QUOTES|JSSCONNECT</h4>
       <h3 style="text-align:left;">Always walk through life as if you have something new to learn and you will.</h3>
@@ -114,10 +114,10 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
   <!-- After-Loading Screen -->
-  <div id="after-loading" style="display:none;">
+  <div id="after-loading">
     <div id="home">
 
       <div id="homeText">
@@ -372,19 +372,19 @@
       }
 
       /* Loading */
-      let loading = document.getElementById("loading");
-      let home = document.getElementById("home");
-      let afterLoading = document.getElementById("after-loading");
-      let topMenu = document.getElementById("topMenu");
-      topMenu.style.display = "none";
-      setTimeout(() => {
-        loading.style.display = "none";
-        home.classList.add('magictime', 'swap');
-        home.style.display = "flex";
-        afterLoading.style.display = "block";
-        topMenu.style.display = "flex";
-        topMenu.classList.add('magictime', 'swap');
-      }, 3000);
+      // let loading = document.getElementById("loading");
+      // let home = document.getElementById("home");
+      // let afterLoading = document.getElementById("after-loading");
+      // let topMenu = document.getElementById("topMenu");
+      // topMenu.style.display = "none";
+      // setTimeout(() => {
+      //   loading.style.display = "none";
+      //   home.classList.add('magictime', 'swap');
+      //   home.style.display = "flex";
+      //   afterLoading.style.display = "block";
+      //   topMenu.style.display = "flex";
+      //   topMenu.classList.add('magictime', 'swap');
+      // }, 3000);
     </script>
     </body>
 
