--- a/views/firstyear.ejs
+++ b/views/firstyear.ejs
@@ -4,7 +4,7 @@
   </style>
   <div class="first-year-container">
     <h2 id="year-heading">
-      <%= year %>
+      <%= year %> Resources
     </h2>
     <h3 style="margin-top:85px;margin-left:6%;color:#7510f7;font-size:3.5rem;">Books</h3>
     <div class="booksGrid">
