--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,6 +3,9 @@
     padding: 45px 0;
     background-color: #f5f5f5 !important;
     font-size: 1.1rem !important;
+     position: absolute !important;
+    bottom: 0 !important;
+    width: 100% !important;
   }
   .ui.footer .item {
     color: black !important;
