--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -50,8 +50,8 @@
       <h2 id="termsandconditions" style="margin-bottom: 60px;color: #364e68;">Privacy Policy for Jssconnect</h2>
     </div>
 
-    <p>At Jssconnect, accessible from <a href="https://jssconnect.herokuapp.com"
-        style="color: crimson;">https://jssconnect.herokuapp.com</a>, one of our main priorities is the privacy
+    <p>At Jssconnect, accessible from <a href="https://jssconnect.cyclic.app"
+        style="color: crimson;">https://jssconnect.cyclic.app</a>, one of our main priorities is the privacy
       of
       our visitors. This Privacy Policy document contains types of information that is collected and recorded by
       Jssconnect and how we use it.</p>
